--- a/NLS-Calculations.ipynb
+++ b/NLS-Calculations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -298,25 +298,25 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pinn.load_state_dict(torch.load(\"./nls_weights/noisy2_dft_pinn_learned_coeffs_old.pth\", map_location=torch.device('cpu')))"
+    "pinn.load_state_dict(torch.load(\"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\", map_location=torch.device('cpu')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.6219943e-06+1.0000192j 3.2605899e-06+0.5000287j]\n"
+      "[6.0881193e-06+0.9999879j 8.7046510e-06+0.499985j ]\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,23 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.003878456777252459"
+       "(0.0024107128082949776, 0.0010562056099916335)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
-    "errs.mean()"
+    "errs.mean(), errs.std()"
    ]
   },
   {
