--- a/NLS-Calculations.ipynb
+++ b/NLS-Calculations.ipynb
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "You're running on cpu\n",
-      "Noisy (x, t)\n",
-      "Noisy labels\n",
-      "nodft\n",
+      "Clean (x, t)\n",
+      "Clean labels\n",
+      "dft\n",
       "Considering up to t =  1.2487830798019428\n",
-      "X0*X1 {X1, X0}\n",
+      "X0*X1 {X0, X1}\n",
       "X2 {X2}\n"
      ]
     }
@@ -46,9 +46,9 @@
     "print(\"You're running on\", device)\n",
     "\n",
     "# Adding noise\n",
-    "noise_intensity = 0.01/np.sqrt(2)\n",
-    "noisy_xt = True; noisy_labels = True\n",
-    "DENOISE = False\n",
+    "noise_intensity = 0.01\n",
+    "noisy_xt = False; noisy_labels = False\n",
+    "DENOISE = True\n",
     "mode = int(noisy_xt)+int(noisy_labels)\n",
     "\n",
     "# Doman bounds\n",
@@ -70,10 +70,11 @@
     "u_star = to_column_vector(Exact_u.T)\n",
     "v_star = to_column_vector(Exact_v.T)\n",
     "\n",
-    "N = 5000\n",
+    "N = 2500\n",
     "N = min(N, X_star.shape[0])\n",
     "idx = np.random.choice(X_star.shape[0], N, replace=False)\n",
-    "np.save(\"./nls_weights/idx.npy\", idx)\n",
+    "# np.save(\"./nls_weights/idx.npy\", idx)\n",
+    "idx = np.load(\"./nls_weights/idx.npy\")\n",
     "\n",
     "X_train = X_star[idx, :]\n",
     "u_train = u_star[idx, :]\n",
@@ -81,13 +82,25 @@
     "\n",
     "if noisy_xt:\n",
     "    print(\"Noisy (x, t)\")\n",
-    "    X_train = perturb2d(X_train, intensity=noise_intensity)\n",
+    "    # X_train = perturb2d(X_train, intensity=noise_intensity)\n",
+    "    # X_train_noise = perturb(X_train, intensity=noise_intensity, overwrite=False)\n",
+    "    # np.save(\"./nls_weights/X_train_noise.npy\", X_train_noise)\n",
+    "    X_train_noise = np.load(\"./nls_weights/X_train_noise.npy\")\n",
+    "    X_train = X_train + X_train_noise\n",
     "else: print(\"Clean (x, t)\")\n",
     "\n",
     "if noisy_labels:\n",
-    "\tprint(\"Noisy labels\")\n",
-    "\tu_train = perturb(u_train, intensity=noise_intensity)\n",
-    "\tv_train = perturb(v_train, intensity=noise_intensity)\n",
+    "    print(\"Noisy labels\")\n",
+    "    # u_noise = perturb(u_train, intensity=noise_intensity, overwrite=False)\n",
+    "    # np.save(\"./nls_weights/u_noise.npy\", u_noise)\n",
+    "    u_noise = np.load(\"./nls_weights/u_noise.npy\")\n",
+    "    u_train = u_train + u_noise\n",
+    "    # v_noise = perturb(v_train, intensity=noise_intensity, overwrite=False)\n",
+    "    # np.save(\"./nls_weights/v_noise.npy\", v_noise)\n",
+    "    v_noise = np.load(\"./nls_weights/v_noise.npy\")\n",
+    "    v_train = v_train + v_noise\n",
+    "\n",
+    "    del v_noise, u_noise\n",
     "else: print(\"Clean labels\")\n",
     "\n",
     "X_train = to_tensor(X_star, True).to(device)\n",
@@ -102,7 +115,7 @@
     "feature_names = ['hf', '|hf|', 'h_xx']\n",
     "\n",
     "class RobustComplexPINN(nn.Module):\n",
-    "    def __init__(self, model, loss_fn, index2features, scale=False, lb=None, ub=None, init_cs=(0.1, 0.1), init_betas=(0.0, 0.0)):\n",
+    "    def __init__(self, model, loss_fn, index2features, scale=False, lb=None, ub=None, init_cs=(0.01, 0.01), init_betas=(0.0, 0.0)):\n",
     "        super(RobustComplexPINN, self).__init__()\n",
     "        # FFTNN\n",
     "        global N\n",
@@ -112,8 +125,8 @@
     "        self.model = model\n",
     "        \n",
     "        # Beta-Robust PCA\n",
-    "        self.inp_rpca = RobustPCANN(beta=init_betas[0], is_beta_trainable=True, inp_dims=2, hidden_dims=32)\n",
-    "        self.out_rpca = RobustPCANN(beta=init_betas[1], is_beta_trainable=True, inp_dims=2, hidden_dims=32)\n",
+    "        self.inp_rpca = RobustPCANN(beta=init_betas[0], is_beta_trainable=False, inp_dims=2, hidden_dims=50)\n",
+    "        self.out_rpca = RobustPCANN(beta=init_betas[1], is_beta_trainable=False, inp_dims=2, hidden_dims=50)\n",
     "\n",
     "        self.callable_loss_fn = loss_fn\n",
     "        self.index2features = index2features; self.feature2index = {}\n",
@@ -132,17 +145,18 @@
     "        total_loss = []\n",
     "\n",
     "        if denoising: \n",
+    "            # best: normalize=True, center=False, is_clamp=True, axis=0\n",
     "            # Denoising FFT on (x, t)\n",
     "            HS = cat(torch.fft.ifft(self.in_fft_nn(HS[1])*HS[0]).real.reshape(-1, 1), \n",
     "                     torch.fft.ifft(self.in_fft_nn(HS[3])*HS[2]).real.reshape(-1, 1))\n",
     "            HS = HL-HS\n",
+    "            H = self.inp_rpca(HL, HS, normalize=False, center=False, is_clamp=False, axis=None, apply_tanh=True)\n",
     "            \n",
     "            # Denoising FFT on y_input\n",
     "            y_input_S = y_input-torch.fft.ifft(self.out_fft_nn(y_input_S[1])*y_input_S[0]).reshape(-1, 1)\n",
-    "            H = self.inp_rpca(HL, HS, normalize=True)\n",
     "            y_input = self.out_rpca(cat(y_input.real, y_input.imag), \n",
     "                                    cat(y_input_S.real, y_input_S.imag), \n",
-    "                                    normalize=True)\n",
+    "                                    normalize=False, center=False, is_clamp=False, axis=0, apply_tanh=True)\n",
     "            y_input = torch.complex(y_input[:, 0:1], y_input[:, 1:2])\n",
     "            \n",
     "            grads_dict, u_t = self.grads_dict(H[:, 0:1], H[:, 1:2])\n",
@@ -154,7 +168,9 @@
     "            total_loss.append(complex_mse(grads_dict['X'+self.feature2index['hf']], y_input))\n",
     "        # PDE Loss\n",
     "        if update_pde_params:\n",
-    "            total_loss.append(complex_mse(self.callable_loss_fn(grads_dict), u_t))\n",
+    "            eq_loss = complex_mse(self.callable_loss_fn(grads_dict), u_t)\n",
+    "            # eq_loss += torch.sum(torch.abs(self.callable_loss_fn.complex_coeffs().real))\n",
+    "            total_loss.append(eq_loss)\n",
     "            \n",
     "        return total_loss\n",
     "    \n",
@@ -284,51 +300,12 @@
     "\n",
     "pinn = RobustComplexPINN(model=complex_model, loss_fn=mod, \n",
     "                         index2features=feature_names, scale=False, lb=lb, ub=ub, \n",
-    "                         init_cs=(0.1, 0.1), init_betas=(0.0, 0.0)).to(device)"
+    "                         init_cs=(1e-1, 1e-1), init_betas=(1e-5, 1e-5)).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pinn.load_state_dict(torch.load(\"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\", map_location=torch.device('cpu')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6.0881193e-06+0.9999879j 8.7046510e-06+0.499985j ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "est_coeffs = pinn.callable_loss_fn.complex_coeffs().cpu().detach().numpy().ravel()\n",
-    "print(est_coeffs)\n",
-    "grounds = np.array([1j, 0+0.5j])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,31 +316,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.0024107128082949776, 0.0010562056099916335)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
-    "errs.mean(), errs.std()"
+    "cases = [\"Clean data\", \"Noisy u\", \"Noisy (x, t) and u\"]\n",
+    "grounds = np.array([1j, 0+0.5j])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dft_weights = [\"./nls_weights/cleanall_dft_pinn_learned_coeffs.pth\", \n",
+    "               \"./nls_weights/noisy1_dft_pinn_learned_coeffs.pth\", \n",
+    "               \"./nls_weights/noisy2_dft_pinn_learned_coeffs_old.pth\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean data\n",
+      "[-1.3622053e-05+1.0000147j -2.6480237e-05+0.5000152j]\n",
+      "0.004053919950932267 0.002052529541353405\n",
+      "Noisy u\n",
+      "[-9.8495968e-07+1.0000356j  2.0994257e-06+0.5000038j]\n",
+      "0.002218284319211805 0.001347434076808941\n",
+      "Noisy (x, t) and u\n",
+      "[1.7906715e-06+1.0000329j  5.4389197e-06+0.49999726j]\n",
+      "0.0022566155039527797 0.0010384301302851394\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, wei in enumerate(dft_weights):\n",
+    "    print(cases[i])\n",
+    "    pinn.load_state_dict(torch.load(wei, map_location=torch.device('cpu')))\n",
+    "    est_coeffs = pinn.callable_loss_fn.complex_coeffs().cpu().detach().numpy().ravel()\n",
+    "    print(est_coeffs)\n",
+    "    errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
+    "    print(errs.mean(), errs.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodft_weights = [\"./nls_weights/cleanall_nodft_pinn_learned_coeffs.pth\", \n",
+    "               \"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\", \n",
+    "               \"./nls_weights/noisy1_nodft_pinn_learned_coeffs.pth\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean data\n",
+      "[1.9268277e-06+1.0000187j  4.8830016e-06+0.49999803j]\n",
+      "0.0014671667746894977 0.0004143114287389776\n",
+      "Noisy u\n",
+      "[6.0881193e-06+0.9999879j 8.7046510e-06+0.499985j ]\n",
+      "0.0024107128082949776 0.0010562056099916335\n",
+      "Noisy (x, t) and u\n",
+      "[-4.5466327e-06+1.00001j    -8.4590274e-06+0.50005484j]\n",
+      "0.006098360023352888 0.004998616145868137\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, wei in enumerate(nodft_weights):\n",
+    "    print(cases[i])\n",
+    "    pinn_states = torch.load(wei, map_location=torch.device('cpu'))\n",
+    "    est_coeffs = pinn_states['callable_loss_fn.reals'] + 1j*pinn_states['callable_loss_fn.imags']\n",
+    "    est_coeffs = est_coeffs.cpu().detach().numpy().ravel()\n",
+    "    print(est_coeffs)\n",
+    "    errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
+    "    print(errs.mean(), errs.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\" proj hidden dims: 50 -> 32"
+   ]
   }
  ],
  "metadata": {
