--- a/QHO-Calculations.ipynb
+++ b/QHO-Calculations.ipynb
@@ -28,9 +28,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X0*X2 {X2, X0}\n",
+      "X0*X2 {X0, X2}\n",
       "X1 {X1}\n",
-      "Constructing -1.0*V*hf*(0.002839 + 0.998631*I) - 1.0*h_xx*(0.000211 - 0.499448*I) {h_xx, V, hf}\n"
+      "Constructing -1.0*V*hf*(0.002839 + 0.998631*I) - 1.0*h_xx*(0.000211 - 0.499448*I) {h_xx, hf, V}\n"
      ]
     }
    ],
@@ -354,7 +354,11 @@
    "source": [
     "def percent_coeffcient_error(sig, ground):\n",
     "    # This function is for testing a single effective coefficient.\n",
-    "    return np.abs(100*(sig-ground)/np.abs(ground))"
+    "    return np.abs(100*(sig-ground)/np.abs(ground))\n",
+    "\n",
+    "def percent_coeffcient_error(sig, ground):\n",
+    "    # This function is for testing a single effective coefficient.\n",
+    "    return 100*complex_l1_norm((sig-ground))/complex_l1_norm(ground)"
    ]
   },
   {
@@ -370,15 +374,15 @@
       "Loaded the model's weights properly\n",
       "(0.00011437786452006549-0.9992526173591614j)\n",
       "(3.0384351703105494e-05+0.5000637769699097j)\n",
-      "0.0449 0.0307\n",
+      "0.0525 0.0337\n",
       "Loaded the model's weights properly\n",
       "(1.0002991984947585e-05-0.9989632368087769j)\n",
       "(3.821068094111979e-05+0.5001750588417053j)\n",
-      "0.0698 0.0339\n",
+      "0.0737 0.0310\n",
       "Loaded the model's weights properly\n",
       "(0.00023310448159463704-0.9989814758300781j)\n",
       "(0.0002457057998981327+0.5000653862953186j)\n",
-      "0.0777 0.0268\n"
+      "0.0937 0.0315\n"
      ]
     }
    ],
@@ -411,15 +415,15 @@
       "Loaded the model's weights properly\n",
       "(0.00011855408956762403-0.999647855758667j)\n",
       "(4.562547474051826e-05+0.49998557567596436j)\n",
-      "0.0234 0.0138\n",
+      "0.0295 0.0175\n",
       "Loaded the model's weights properly\n",
       "(-0.00044186218292452395-0.9994983673095703j)\n",
       "(3.2680745789548382e-06+0.5000836253166199j)\n",
-      "0.0418 0.0251\n",
+      "0.0559 0.0385\n",
       "Loaded the model's weights properly\n",
       "(0.0017959531396627426-0.9981059432029724j)\n",
       "(0.000855024962220341+0.4999435245990753j)\n",
-      "0.2162 0.0448\n"
+      "0.2757 0.0934\n"
      ]
     }
    ],
