--- a/NLS-Calculations.ipynb
+++ b/NLS-Calculations.ipynb
@@ -311,7 +311,11 @@
    "source": [
     "def percent_coeffcient_error(sig, ground):\n",
     "    # This function is for testing a single effective coefficient.\n",
-    "    return np.abs(100*(sig-ground)/np.abs(ground))"
+    "    return np.abs(100*(sig-ground))/np.abs(ground)\n",
+    "\n",
+    "def percent_coeffcient_error(sig, ground):\n",
+    "    # This function is for testing a single effective coefficient.\n",
+    "    return 100*complex_l1_norm((sig-ground))/complex_l1_norm(ground)"
    ]
   },
   {
@@ -332,7 +336,9 @@
    "source": [
     "dft_weights = [\"./nls_weights/cleanall_dft_pinn_learned_coeffs.pth\", \n",
     "               \"./nls_weights/noisy1_dft_pinn_learned_coeffs.pth\", \n",
-    "               \"./nls_weights/noisy2_dft_pinn_learned_coeffs_old.pth\"]"
+    "               \"./nls_weights/noisy2_dft_pinn_learned_coeffs_new.pth\"]\n",
+    "# \"./nls_weights/noisy2_dft_pinn_learned_coeffs_old.pth\"\n",
+    "# \"./nls_weights/noisy2_dft_pinn_learned_coeffs.pth\""
    ]
   },
   {
@@ -345,14 +351,14 @@
      "output_type": "stream",
      "text": [
       "Clean data\n",
-      "[-1.3622053e-05+1.0000147j -2.6480237e-05+0.5000152j]\n",
-      "0.004053919950932267 0.002052529541353405\n",
+      "[6.0393468e-06+1.0000116j  1.5545611e-05+0.49999174j]\n",
+      "0.0032602178180241026 0.0014999530321802013\n",
       "Noisy u\n",
       "[-9.8495968e-07+1.0000356j  2.0994257e-06+0.5000038j]\n",
-      "0.002218284319211805 0.001347434076808941\n",
+      "0.0024228391623637435 0.0012400145635638182\n",
       "Noisy (x, t) and u\n",
-      "[1.7906715e-06+1.0000329j  5.4389197e-06+0.49999726j]\n",
-      "0.0022566155039527797 0.0010384301302851394\n"
+      "[-2.2595152e-06+1.0000045j  -5.7081788e-06+0.49997267j]\n",
+      "0.00364316425702782 0.002964217435419414\n"
      ]
     }
    ],
@@ -388,13 +394,13 @@
      "text": [
       "Clean data\n",
       "[1.9268277e-06+1.0000187j  4.8830016e-06+0.49999803j]\n",
-      "0.0014671667746894977 0.0004143114287389776\n",
+      "0.0017171297940876684 0.0003471388254183694\n",
       "Noisy u\n",
       "[6.0881193e-06+0.9999879j 8.7046510e-06+0.499985j ]\n",
-      "0.0024107128082949776 0.0010562056099916335\n",
+      "0.00327891502820421 0.0014601288057747297\n",
       "Noisy (x, t) and u\n",
       "[-4.5466327e-06+1.00001j    -8.4590274e-06+0.50005484j]\n",
-      "0.006098360023352888 0.004998616145868137\n"
+      "0.007057540710775356 0.0056015194104475086\n"
      ]
     }
    ],
@@ -417,6 +423,13 @@
    "source": [
     "# \"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\" proj hidden dims: 50 -> 32"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
