--- a/NLS-Calculations-new.ipynb
+++ b/NLS-Calculations-new.ipynb
@@ -10,8 +10,9 @@
      "output_type": "stream",
      "text": [
       "You're running on cpu\n",
-      "Clean (x, t)\n",
-      "Clean labels\n",
+      "Loading indices and noises...\n",
+      "Noisy (x, t)\n",
+      "Noisy labels\n",
       "dft\n",
       "Considering up to t =  1.2487830798019428\n",
       "X0*X1 {X1, X0}\n",
@@ -46,8 +47,8 @@
     "print(\"You're running on\", device)\n",
     "\n",
     "# Adding noise\n",
-    "noise_intensity = 0.01\n",
-    "noisy_xt = False; noisy_labels = False\n",
+    "noise_intensity = 0.01/np.sqrt(2)\n",
+    "noisy_xt = True; noisy_labels = True\n",
     "DENOISE = True\n",
     "mode = int(noisy_xt)+int(noisy_labels)\n",
     "\n",
@@ -70,11 +71,12 @@
     "u_star = to_column_vector(Exact_u.T)\n",
     "v_star = to_column_vector(Exact_v.T)\n",
     "\n",
+    "force_save = False\n",
     "N = 2500\n",
     "N = min(N, X_star.shape[0])\n",
     "idx = np.random.choice(X_star.shape[0], N, replace=False)\n",
-    "# np.save(\"./nls_weights/idx.npy\", idx)\n",
-    "idx = np.load(\"./nls_weights/idx.npy\")\n",
+    "if force_save: np.save(\"./nls_weights/new/idx.npy\", idx); print(\"Saving indices and noises...\")\n",
+    "else: idx = np.load(\"./nls_weights/new/idx.npy\"); print(\"Loading indices and noises...\")\n",
     "\n",
     "X_train = X_star[idx, :]\n",
     "u_train = u_star[idx, :]\n",
@@ -82,30 +84,30 @@
     "\n",
     "if noisy_xt:\n",
     "    print(\"Noisy (x, t)\")\n",
-    "    # X_train = perturb2d(X_train, intensity=noise_intensity)\n",
-    "    # X_train_noise = perturb(X_train, intensity=noise_intensity, overwrite=False)\n",
-    "    # np.save(\"./nls_weights/X_train_noise.npy\", X_train_noise)\n",
-    "    X_train_noise = np.load(\"./nls_weights/X_train_noise.npy\")\n",
+    "    X_train_noise = perturb2d(X_train, intensity=noise_intensity, overwrite=False)\n",
+    "    if force_save: np.save(\"./nls_weights/new/X_train_noise.npy\", X_train_noise)\n",
+    "    else: X_train_noise = np.load(\"./nls_weights/new/X_train_noise.npy\")\n",
     "    X_train = X_train + X_train_noise\n",
     "else: print(\"Clean (x, t)\")\n",
     "\n",
     "if noisy_labels:\n",
     "    print(\"Noisy labels\")\n",
-    "    # u_noise = perturb(u_train, intensity=noise_intensity, overwrite=False)\n",
-    "    # np.save(\"./nls_weights/u_noise.npy\", u_noise)\n",
-    "    u_noise = np.load(\"./nls_weights/u_noise.npy\")\n",
+    "    u_noise = perturb(u_train, intensity=noise_intensity, overwrite=False)\n",
+    "    if force_save: np.save(\"./nls_weights/new/u_noise.npy\", u_noise)\n",
+    "    else: u_noise = np.load(\"./nls_weights/new/u_noise.npy\")\n",
     "    u_train = u_train + u_noise\n",
-    "    # v_noise = perturb(v_train, intensity=noise_intensity, overwrite=False)\n",
-    "    # np.save(\"./nls_weights/v_noise.npy\", v_noise)\n",
-    "    v_noise = np.load(\"./nls_weights/v_noise.npy\")\n",
+    "\n",
+    "    v_noise = perturb(v_train, intensity=noise_intensity, overwrite=False)\n",
+    "    if force_save: np.save(\"./nls_weights/new/v_noise.npy\", v_noise)\n",
+    "    else: v_noise = np.load(\"./nls_weights/new/v_noise.npy\")\n",
     "    v_train = v_train + v_noise\n",
     "\n",
     "    del v_noise, u_noise\n",
     "else: print(\"Clean labels\")\n",
     "\n",
-    "X_train = to_tensor(X_star, True).to(device)\n",
-    "u_train = to_tensor(u_star, False).to(device)\n",
-    "v_train = to_tensor(v_star, False).to(device)\n",
+    "X_train = to_tensor(X_train, True).to(device)\n",
+    "u_train = to_tensor(u_train, False).to(device)\n",
+    "v_train = to_tensor(v_train, False).to(device)\n",
     "h_train = torch.complex(u_train, v_train).to(device)\n",
     "lb = to_tensor(lb, False).to(device)\n",
     "ub = to_tensor(ub, False).to(device)\n",
@@ -115,7 +117,7 @@
     "feature_names = ['hf', '|hf|', 'h_xx']\n",
     "\n",
     "class RobustComplexPINN(nn.Module):\n",
-    "    def __init__(self, model, loss_fn, index2features, scale=False, lb=None, ub=None, init_cs=(0.01, 0.01), init_betas=(0.0, 0.0)):\n",
+    "    def __init__(self, model, loss_fn, index2features, scale=False, lb=None, ub=None, init_cs=(0.01, 0.01), init_betas=(0.0, 0.0), learnable_pde_coeffs=True):\n",
     "        super(RobustComplexPINN, self).__init__()\n",
     "        # FFTNN\n",
     "        global N\n",
@@ -129,6 +131,7 @@
     "        self.out_rpca = RobustPCANN(beta=init_betas[1], is_beta_trainable=False, inp_dims=2, hidden_dims=50)\n",
     "\n",
     "        self.callable_loss_fn = loss_fn\n",
+    "        self.learn = learnable_pde_coeffs; self.coeff_buffer = None\n",
     "        self.index2features = index2features; self.feature2index = {}\n",
     "        for idx, fn in enumerate(self.index2features): self.feature2index[fn] = str(idx)\n",
     "        self.scale = scale; self.lb, self.ub = lb, ub\n",
@@ -136,6 +139,13 @@
     "            print(\"Please provide thw lower and upper bounds of your PDE.\")\n",
     "            print(\"Otherwise, there will be error(s)\")\n",
     "        self.diff_flag = diff_flag(self.index2features)\n",
+    "        \n",
+    "    def set_learnable_coeffs(self, condition):\n",
+    "        self.learn = condition\n",
+    "        if self.learn: print(\"Grad updates to PDE coeffs.\")\n",
+    "        else: print(\"NO Grad updates to PDE coeffs, use the unbiased estimation.\")\n",
+    "        for param in self.callable_loss_fn.parameters():\n",
+    "            param.requires_grad_(self.learn)\n",
     "        \n",
     "    def forward(self, H):\n",
     "        if self.scale: H = self.neural_net_scale(H)\n",
@@ -145,12 +155,11 @@
     "        total_loss = []\n",
     "\n",
     "        if denoising: \n",
-    "            # best: normalize=True, center=False, is_clamp=True, axis=0\n",
     "            # Denoising FFT on (x, t)\n",
     "            HS = cat(torch.fft.ifft(self.in_fft_nn(HS[1])*HS[0]).real.reshape(-1, 1), \n",
     "                     torch.fft.ifft(self.in_fft_nn(HS[3])*HS[2]).real.reshape(-1, 1))\n",
     "            HS = HL-HS\n",
-    "            H = self.inp_rpca(HL, HS, normalize=False, center=False, is_clamp=False, axis=None, apply_tanh=True)\n",
+    "            H = self.inp_rpca(HL, HS, normalize=False, center=False, is_clamp=False, axis=0, apply_tanh=True)\n",
     "            \n",
     "            # Denoising FFT on y_input\n",
     "            y_input_S = y_input-torch.fft.ifft(self.out_fft_nn(y_input_S[1])*y_input_S[0]).reshape(-1, 1)\n",
@@ -160,16 +169,22 @@
     "            y_input = torch.complex(y_input[:, 0:1], y_input[:, 1:2])\n",
     "            \n",
     "            grads_dict, u_t = self.grads_dict(H[:, 0:1], H[:, 1:2])\n",
-    "        else:\n",
-    "            grads_dict, u_t = self.grads_dict(HL[:, 0:1], HL[:, 1:2])\n",
-    "        \n",
+    "\n",
+    "        else: grads_dict, u_t = self.grads_dict(HL[:, 0:1], HL[:, 1:2])\n",
+    "\n",
     "        # MSE Loss\n",
     "        if update_network_params:\n",
     "            total_loss.append(complex_mse(grads_dict['X'+self.feature2index['hf']], y_input))\n",
     "        # PDE Loss\n",
     "        if update_pde_params:\n",
-    "            eq_loss = complex_mse(self.callable_loss_fn(grads_dict), u_t)\n",
-    "            # eq_loss += torch.sum(torch.abs(self.callable_loss_fn.complex_coeffs().real))\n",
+    "            if self.learn: \n",
+    "                eq_loss = complex_mse(self.callable_loss_fn(grads_dict), u_t)\n",
+    "                # self.coeff_buffer = self.callable_loss_fn.complex_coeffs().cpu().detach().numpy().ravel()\n",
+    "            else: \n",
+    "                H = cat(grads_dict['X0']*grads_dict['X1'], grads_dict['X2'])\n",
+    "                # self.coeff_buffer = torch.linalg.lstsq(H, u_t).solution.detach() -> error: autodiff on complex numbers\n",
+    "                self.coeff_buffer = torch.linalg.lstsq(H.detach(), u_t.detach()).solution\n",
+    "                eq_loss = complex_mse(H@self.coeff_buffer, u_t)\n",
     "            total_loss.append(eq_loss)\n",
     "            \n",
     "        return total_loss\n",
@@ -177,23 +192,11 @@
     "    def grads_dict(self, x, t):\n",
     "        uf = self.forward(cat(x, t))\n",
     "        u_t = complex_diff(uf, t, device)\n",
-    "        \n",
-    "        ### PDE Loss calculation ###\n",
-    "        # Without calling grad\n",
+    "        u_x = complex_diff(uf, x, device)\n",
     "        derivatives = {}\n",
-    "        for t in self.diff_flag[0]:\n",
-    "            if t=='hf': \n",
-    "                derivatives['X'+self.feature2index[t]] = cplx2tensor(uf)\n",
-    "                derivatives['X1'] = (uf.real**2+uf.imag**2)+0.0j\n",
-    "            elif t=='x': derivatives['X'+self.feature2index[t]] = x\n",
-    "        # With calling grad\n",
-    "        for t in self.diff_flag[1]:\n",
-    "            out = uf\n",
-    "            for c in t:\n",
-    "                if c=='x': out = complex_diff(out, x, device)\n",
-    "                elif c=='t': out = complex_diff(out, t, device)\n",
-    "            derivatives['X'+self.feature2index['h_'+t[::-1]]] = out\n",
-    "        \n",
+    "        derivatives['X0'] = cplx2tensor(uf)\n",
+    "        derivatives['X1'] = (uf.real**2+uf.imag**2)+0.0j\n",
+    "        derivatives['X2'] = complex_diff(u_x, x, device)\n",
     "        return derivatives, u_t\n",
     "    \n",
     "    def gradients(self, func, x):\n",
@@ -206,23 +209,26 @@
     "if DENOISE: dft_tag = \"dft\"\n",
     "print(dft_tag)\n",
     "\n",
-    "def closure():\n",
-    "    global X_train, X_train_S, h_train, h_train_S, x_fft, x_PSD, t_fft, t_PSD\n",
-    "    if torch.is_grad_enabled():\n",
-    "        optimizer2.zero_grad(set_to_none=True)\n",
-    "    losses = pinn.loss(X_train, (x_fft, x_PSD, t_fft, t_PSD), h_train, (h_train_fft, h_train_PSD), update_network_params=True, update_pde_params=True, denoising=DENOISE)\n",
-    "    l = sum(losses)\n",
-    "    if l.requires_grad:\n",
-    "        l.backward(retain_graph=True)\n",
-    "    return l\n",
+    "AAA = 1\n",
+    "BBB = 1\n",
     "\n",
-    "def mtl_closure():\n",
+    "def closure1():\n",
     "    global X_train, X_train_S, h_train, h_train_S, x_fft, x_PSD, t_fft, t_PSD\n",
     "    if torch.is_grad_enabled():\n",
     "        optimizer1.zero_grad(set_to_none=True)\n",
     "    losses = pinn.loss(X_train, (x_fft, x_PSD, t_fft, t_PSD), h_train, (h_train_fft, h_train_PSD), update_network_params=True, update_pde_params=True, denoising=DENOISE)\n",
-    "    loss = losses[0] + (1e-1)*losses[1]\n",
+    "    loss = AAA*losses[0] + BBB*losses[1]\n",
     "    if loss.requires_grad: loss.backward(retain_graph=True)\n",
+    "    return loss\n",
+    "\n",
+    "def closure2():\n",
+    "    global X_train, X_train_S, h_train, h_train_S, x_fft, x_PSD, t_fft, t_PSD\n",
+    "    if torch.is_grad_enabled():\n",
+    "        optimizer2.zero_grad(set_to_none=True)\n",
+    "    losses = pinn.loss(X_train, (x_fft, x_PSD, t_fft, t_PSD), h_train, (h_train_fft, h_train_PSD), update_network_params=True, update_pde_params=True, denoising=DENOISE)\n",
+    "    loss = AAA*losses[0] + BBB*losses[1]\n",
+    "    if loss.requires_grad:\n",
+    "        loss.backward(retain_graph=True)\n",
     "    return loss\n",
     "\n",
     "inp_dimension = 2\n",
@@ -300,7 +306,12 @@
     "\n",
     "pinn = RobustComplexPINN(model=complex_model, loss_fn=mod, \n",
     "                         index2features=feature_names, scale=False, lb=lb, ub=ub, \n",
-    "                         init_cs=(1e-1, 1e-1), init_betas=(1e-5, 1e-5)).to(device)"
+    "                         init_cs=(1e-1, 1e-1), init_betas=(1e-5, 1e-5)).to(device)\n",
+    "\n",
+    "# save_weights_at1 = f\"./nls_weights/new/nls_{dft_tag}_{tag}_opt1.pth\"\n",
+    "# save_weights_at2 = f\"./nls_weights/new/nls_{dft_tag}_{tag}_opt2.pth\"\n",
+    "\n",
+    "grounds = np.array([1j, 0+0.5j])"
    ]
   },
   {
@@ -309,125 +320,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def percent_coeffcient_error(sig, ground):\n",
-    "    # This function is for testing a single effective coefficient.\n",
-    "    return 100*np.abs(sig-ground)/np.abs(ground)\n",
-    "\n",
-    "def cabs(e): return torch.sqrt(e.real**2 + e.imag**2)\n",
-    "\n",
-    "# def percent_coeffcient_error(sig, ground):\n",
-    "#     # This function is for testing a single effective coefficient.\n",
-    "#     return 100*complex_l1_norm((sig-ground))/complex_l1_norm(ground)"
+    "dft_weights = [\"./nls_weights/new/nls_dft_cleanall_opt2.pth\", \n",
+    "               \"./nls_weights/new/nls_dft_noisy1_opt2_b.pth\", \n",
+    "               \"./nls_weights/new/nls_dft_noisy2_opt2_b.pth\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded the model's weights properly\n"
+     ]
+    }
+   ],
    "source": [
-    "cases = [\"Clean data\", \"Noisy u\", \"Noisy (x, t) and u\"]\n",
-    "grounds = np.array([1j, 0+0.5j])"
+    "pinn = load_weights(pinn, dft_weights[mode])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6.9497772e-05+1.0028995j -5.3670592e-05+0.5001808j]\n",
+      "0.16387597470995072 0.12616005670653527\n",
+      "Relative l2 err: 0.003303349239048785\n"
+     ]
+    }
+   ],
    "source": [
-    "dft_weights = [\"./nls_weights/cleanall_dft_pinn_learned_coeffs.pth\", \n",
-    "               \"./nls_weights/noisy1_dft_pinn_learned_coeffs.pth\", \n",
-    "               \"./nls_weights/noisy2_dft_pinn_learned_coeffs_new.pth\"]\n",
-    "# \"./nls_weights/noisy2_dft_pinn_learned_coeffs_old.pth\"\n",
-    "# \"./nls_weights/noisy2_dft_pinn_learned_coeffs.pth\""
+    "gd, h_t = pinn.grads_dict(X_train[:, 0:1], X_train[:, 1:2])\n",
+    "hf = gd['X0']; abs_hf = gd['X1']; h_xx = gd['X2']\n",
+    "coeffs = torch.linalg.lstsq(cat(hf*abs_hf, h_xx), h_t).solution.detach().numpy().flatten()\n",
+    "print(coeffs)\n",
+    "errs = coeffs-grounds\n",
+    "errs = 100*(np.abs(errs)/np.abs(grounds))\n",
+    "print(errs.mean(), errs.std())\n",
+    "preds = pinn(X_star)\n",
+    "rel_err = relative_l2_error(torch.sqrt(preds.real**2 + preds.imag**2).detach().numpy(), \n",
+    "                            np.sqrt(u_star**2 + v_star**2))\n",
+    "print(\"Relative l2 err:\", rel_err)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean data\n",
-      "[6.0393468e-06+1.0000116j  1.5545611e-05+0.49999174j]\n",
-      "0.0024124286803920733 0.00110788415662923\n",
-      "Rel l2 err: 0.00120192296272565\n",
-      "Noisy u\n",
-      "[-9.8495968e-07+1.0000356j  2.0994257e-06+0.5000038j]\n",
-      "0.002218284319211805 0.001347434076808941\n",
-      "Rel l2 err: 0.0012840014249842213\n",
-      "Noisy (x, t) and u\n",
-      "[-2.2595152e-06+1.0000045j  -5.7081788e-06+0.49997267j]\n",
-      "0.0030449602975048964 0.0025387401555979614\n",
-      "Rel l2 err: 0.001216446720900413\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, wei in enumerate(dft_weights):\n",
-    "    print(cases[i])\n",
-    "    pinn.load_state_dict(torch.load(wei, map_location=torch.device('cpu')))\n",
-    "    est_coeffs = pinn.callable_loss_fn.complex_coeffs().cpu().detach().numpy().ravel()\n",
-    "    print(est_coeffs)\n",
-    "    errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
-    "    print(errs.mean(), errs.std())\n",
-    "    print(\"Rel l2 err:\", relative_l2_error(to_numpy(cabs(pinn((X_star)))), np.sqrt(u_star**2 + v_star**2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "nodft_weights = [\"./nls_weights/cleanall_nodft_pinn_learned_coeffs.pth\", \n",
-    "               \"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\", \n",
-    "               \"./nls_weights/noisy1_nodft_pinn_learned_coeffs.pth\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clean data\n",
-      "[1.9268277e-06+1.0000187j  4.8830016e-06+0.49999803j]\n",
-      "0.0014671667746894977 0.0004143114287389776\n",
-      "Noisy u\n",
-      "[6.0881193e-06+0.9999879j 8.7046510e-06+0.499985j ]\n",
-      "0.0024107128082949776 0.0010562056099916335\n",
-      "Noisy (x, t) and u\n",
-      "[-4.5466327e-06+1.00001j    -8.4590274e-06+0.50005484j]\n",
-      "0.006098360023352888 0.004998616145868137\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, wei in enumerate(nodft_weights):\n",
-    "    print(cases[i])\n",
-    "    pinn_states = torch.load(wei, map_location=torch.device('cpu'))\n",
-    "    est_coeffs = pinn_states['callable_loss_fn.reals'] + 1j*pinn_states['callable_loss_fn.imags']\n",
-    "    est_coeffs = est_coeffs.cpu().detach().numpy().ravel()\n",
-    "    print(est_coeffs)\n",
-    "    errs = np.array((percent_coeffcient_error(est_coeffs[0], grounds[0]), percent_coeffcient_error(est_coeffs[1], grounds[1])))\n",
-    "    print(errs.mean(), errs.std())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \"./nls_weights/noisy2_nodft_pinn_learned_coeffs.pth\" proj hidden dims: 50 -> 32"
+    "# w/ DFT\n",
+    "# Cleanall\n",
+    "# [1.12685986e-04+1.0001599j  5.66483322e-05+0.50002307j]\n",
+    "# 0.01589568745630536 0.003662748444999469\n",
+    "# Relative l2 err: 0.0014132390076090123\n",
+    "# Noisy1\n",
+    "# [ 5.5367664e-06+0.9996846j  -7.4074320e-05+0.49983886j]\n",
+    "# 0.033508946765239335 0.0019613097264666937\n",
+    "# Relative l2 err: 0.0014168049412777379\n",
+    "# Noisy2\n",
+    "# [ 6.9497772e-05+1.0028995j -5.3670592e-05+0.5001808j]\n",
+    "# 0.16387597470995072 0.12616005670653527\n",
+    "# Relative l2 err: 0.003303349239048785\n",
+    "\n",
+    "# w/o DFT\n",
+    "# Cleanall\n",
+    "# [ 4.163359e-06+1.0001392j -9.698814e-05+0.5001223j]\n",
+    "# 0.022574586320289903 0.008644718187331235\n",
+    "# Relative l2 err: 0.001343627222670343\n",
+    "# Noisy1\n",
+    "# [-8.9416135e-05+0.9997365j  -3.0673970e-04+0.49985275j]\n",
+    "# 0.04793887117495375 0.020111925559025086\n",
+    "# Relative l2 err: 0.0013985609992527854\n",
+    "# Noisy2\n",
+    "# [7.6182099e-05+1.0031564j 5.0334427e-05+0.5003921j]\n",
+    "# 0.19739684625485088 0.11833743217336962\n",
+    "# Relative l2 err: 0.0033124687519358667"
    ]
   },
   {
